src/objects/Account_Plan__c.object
<CustomObject>
    <description>Account Plan  covers following sections for Phase I
1. Customer Business Strategy
2. Competitive Landscape - Price tier wise / vendor wise
3. MMI Account Strategy - Annual / Quarterly

Annual Strategy can cover following:-
1. Summary
2. Portfolio Strategy
3. Product Strategy
4. Marketing Strategy
5. Channel Strategy

Quarterly Plan need to be derived from Annual Strategy and driving the quarterly priorities to align with Annual strategic plan for the account




is the MMI strategy for the Account. There are two stages to the Account plan - Annual and Quarterly
It should cover
1. Executive Summary 
2. Portfolio / Ranging Starategy
3. Account Achievements and Highlights</description>
    <fields>
        <fullName>Account_Priorities_Strategies__c</fullName>
        <description>Customer&apos;s / Account&apos;s strategic priorities for the Year / Quarter</description>
        <inlineHelpText>Customer&apos;s / Account&apos;s strategic priorities for the Year / Quarter</inlineHelpText>
        <label>Account&apos;s Priorities/Strategies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Driving_Forces__c</fullName>
        <description>These are the factors / events which influence strategy</description>
        <inlineHelpText>These are the factors / events which influence strategy</inlineHelpText>
        <label>Key Driving Forces</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMI_Strategy_For_The_Current_Quarter__c</fullName>
        <description>Quarterly Plan need to be derived from Annual Strategy and driving the quarterly priorities to align with Annual strategic plan for the account is the MMI strategy for the Account. There are two stages to the Account plan - Annual and Quarterly
It should cover ; Executive Summary ; Portfolio / Ranging Starategy; Account Achievements and Highlights</description>
        <inlineHelpText>Quarterly Plan need to be derived from Annual Strategy
It should cover ; Executive Summary ; Portfolio / Ranging Starategy; Account Achievements and Highlights</inlineHelpText>
        <label>MMI Strategy For The Current Quarter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMI_Strategy_Linked_to_Annual_OKR__c</fullName>
        <description>Annual Strategy can cover following:-
1. Summary
2. Portfolio Strategy
3. Product Strategy
4. Marketing Strategy
5. Channel Strategy
This should be aligned to Customer priorities  and MMI OKR&apos;s</description>
        <inlineHelpText>Annual Strategy can cover following:-
1. Summary
2. Portfolio Strategy
3. Product Strategy
4. Marketing Strategy
5. Channel Strategy
This should be aligned to Customer priorities  and MMI OKR&apos;s</inlineHelpText>
        <label>MMI Strategy - Linked to Annual OKR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Quarter__c</fullName>
        <description>The quarter of the year to which this account plan is mapped / link</description>
        <inlineHelpText>The quarter of the year to which this account plan is mapped / link</inlineHelpText>
        <label>Plan Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Plan_Quarter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>